--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -68,9 +68,13 @@ jobs:
     #   uses: actions/setup-example@v1
 
     # Initializes the CodeQL tools for scanning.
-    - name: Initialize CodeQL
-      uses: github/codeql-action/init@v3
-      with:
+    - name: Manual Build
+      run: |
+        mkdir build
+        cd build
+        cmake ..
+        make -j$(nproc)
+        
         languages: ${{ matrix.language }}
         build-mode: ${{ matrix.build-mode }}
         # If you wish to specify custom queries, you can do so here or in a config file.
