Update codeql.yml, added a manual run workflow trigger button

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -1,12 +1,13 @@
 name: "CodeQL"
 
 on:
+  workflow_dispatch:         # ✅ Manual trigger button
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
   schedule:
-    - cron: '27 19 * * 1'  # weekly scan on Mondays
+    - cron: '27 19 * * 1'     # ✅ Weekly scan (Mondays)
 
 jobs:
   analyze:
@@ -29,3 +30,15 @@ jobs:
 
     steps:
       - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v3
+        with:
+          languages: ${{ matrix.language }}
+          build-mode: ${{ matrix.build-mode }}
+
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v3
+        with:
+          category: "/language:${{ matrix.language }}"
